--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
     packagingOptions{
         exclude 'META-INF/rxjava.properties'
     }
+
+
 }
 
 dependencies {
@@ -29,15 +31,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
 
     //retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     //mockito
     testCompile 'org.mockito:mockito-core:2.6.8'
 
-    //rxjava
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.3'
+
 }
